Fix the width on mobile

--- a/themes/theme-boilerplate/src/scss/pages/_profile.scss
+++ b/themes/theme-boilerplate/src/scss/pages/_profile.scss
@@ -458,7 +458,6 @@ body.Section-EditProfile {
 
         @include maxWidth {
             min-width: 500px;
-            width: auto;
         }
 
         * {
